--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,5 @@
 # cambiar puerto segun el puerto qur utilizce el microservicio
 # se debe crear una copia de este archivo y nombrarla como .env 
 
-USERS_SERVICES=127.0.0.1
-USERS_SERVICES_PORT=3001 ## es el mismo puerto que esta configurado en el main de micro servicios user
+USERS_SERVICES=localhost
+USERS_SERVICES_PORT=3006 ## es el mismo puerto que esta configurado en el main de micro servicios user
