se añadio inventory_management y funciones como crear, buscar uno, buscar todos, eliminar

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,6 @@ USERS_SERVICES_PORT=3006 ## es el mismo puerto que esta configurado en el main d
 
 PROJECT_SERVICES=localhost 
 PROJECT_SERVICES_PORT=3008 
+
+INVENTORY_MANAGEMENT_SERVICES=localhost 
+INVENTORY_MANAGEMENT_PORT=3009
