microservicio check-in

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,6 @@ INVENTORY_MANAGEMENT_PORT=3009
 
 USER_ROLE_SERVICES=localhost 
 USER_ROLE_PORT=3010
+
+CHECK_IN_SERVICE=localhost 
+CHECK_IN_PORT=3009
