--- a/.env.example
+++ b/.env.example
@@ -2,11 +2,11 @@
 # cambiar puerto segun el puerto qur utilizce el microservicio
 # se debe crear una copia de este archivo y nombrarla como .env 
 
-USERS_SERVICES=localhost 
-USERS_SERVICES_PORT=3006 ## es el mismo puerto que esta configurado en el main de micro servicios user
+USERS_SERVICES=roundhouse.proxy.rlwy.net
+USERS_SERVICES_PORT=13725 ## es el mismo puerto que esta configurado en el main de micro servicios user
 
-PROJECT_SERVICES=localhost 
-PROJECT_SERVICES_PORT=3008 
+PROJECT_SERVICES=roundhouse.proxy.rlwy.net
+PROJECT_SERVICES_PORT=32923
 
 INVENTORY_MANAGEMENT_SERVICES=localhost 
 INVENTORY_MANAGEMENT_PORT=3011
