--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 # archivo de configuracion puerto de los microservicios 
 # cambiar puerto segun el puerto qur utilizce el microservicio
 # se debe crear una copia de este archivo y nombrarla como .env 
+MONGODB_URI=mongodb+srv://javiesp:javiera123@cittpassbd.e658pj0.mongodb.net/
 
 USERS_SERVICES=localhost
 USERS_SERVICES_PORT=3006
